--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
 body{
   background: #AFB04F;
 }
-table{
-  background-color: rgb(100, 100, 100);
-}
 h1{
   margin-top: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
 }
 h2{
   text-align: center;
@@ -14,12 +11,12 @@ h2{
 small {
   font-size: 10px;
   text-align: left;
-  color: #4f4f4f;
+  color: #AFB04F;
   display: block;
 }
 
 .block {
   background-color: #504FB0;
   width: 100vw;
-  height: 200px;
+  height: 60px;
 }
