--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
   background: #AFB04F;
 }
 h1{
+  padding-left: 20px;
   margin-top: 5px;
   margin-bottom: 0px;
 }
@@ -16,6 +17,7 @@ small {
 }
 
 .block {
+  margin-left: 0px;
   background-color: #504FB0;
   width: 100vw;
   height: 60px;
